--- a/demo/demo.css
+++ b/demo/demo.css
@@ -1,4 +1,88 @@
+HTML {
+  position: relative;
+  min-height: 100%;
+}
 
 BODY {
   -webkit-font-smoothing: antialiased;
+  background-color: #ecf0f1;
+  width: 85%;
+  margin: auto;
+  overflow-y: scroll;
+  margin-bottom: 60px;
+
+}
+
+.footer {
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  height: 60px;
+  background-color: #f5f5f5;
+}
+
+.footer p {
+  display: inline-block;
+  margin-top: 15px;
+}
+
+.panel-default{
+  margin-top: 20px;
+}
+
+
+.thumbnail {
+  width: 70px;
+  height: 70px;
+}
+
+a {
+  font-size: 16px;
+}
+
+.badge {
+  background-color: #428bca;
+}
+
+.meta, .meta-comments {
+  font-size: 12px;
+  color: #333;
+  margin-bottom: 0;
+}
+
+
+.panel {
+  -webkit-transition: 0.75s ease-in-out all;
+  -moz-transition: 0.75s ease-in-out all;
+  -o-transition: 0.75s ease-in-out all;
+  transition: 0.75s ease-in-out all;
+  background-color: #fff;
+  border: none;
+  margin-bottom: 15px;
+}
+
+.panel a {
+  color: #5f9ea0;
+  font-weight: bold;
+}
+
+.panel .badge {
+  background-color: #5f9ea0;
+  color: #fff;
+}
+
+.panel.ng-enter {
+  opacity: 0;
+}
+
+.panel.ng-enter-active {
+  opacity: 1;
+  transition-delay: 0.5s;
+}
+
+.panel-body {
+  border: 1px solid #ccc;
+  box-shadow: 0 1px 3px rgba(0,0,0,0.1);
+  border-radius: 5px;
+  margin-top: 30px;
 }
